--- a/works/personalpage/index.html
+++ b/works/personalpage/index.html
@@ -50,7 +50,7 @@
             <div class="container">
                 <div class="row pad-top-bottom  move-me">
                     <div class="col-lg-5 col-md-5 col-sm-5 text-center">
-                        <!--<img src="assets/img/sad1.jpg" class="main-img img-circle wow bounceIn animated" data-wow-duration="1s" data-wow-delay=".2s" alt=""/>-->
+                        <!--<img src="assets/img/sad.jpg" class="main-img img-circle wow bounceIn animated" data-wow-duration="1s" data-wow-delay=".2s" alt=""/>-->
                         <h1 class="wow bounceIn animated" data-wow-duration="1s" data-wow-delay=".4s">刘茹</h1>
                         <h2 class="wow bounceIn animated" data-wow-duration="1s" data-wow-delay=".6s">前端工程师</h2>
                         <!--<a href="#about-sec" class="btn custom-btn-one btn-lg wow bounceIn animated" data-wow-duration="1s" data-wow-delay=".8s">基本资料</a>-->
@@ -74,7 +74,7 @@
                         </a>
                     </div>
                     <div class="col-lg-5 col-md-5 col-sm-5 text-center">
-                        <!--<img src="assets/img/smile1.jpg" class="main-img-2 img-circle wow bounceIn animated" data-wow-duration="1s" data-wow-delay=".2s" alt="" />-->
+                        <!--<img src="assets/img/smile.jpg" class="main-img-2 img-circle wow bounceIn animated" data-wow-duration="1s" data-wow-delay=".2s" alt="" />-->
                         <h1 class="wow bounceIn animated" data-wow-duration="1s" data-wow-delay=".4s">热爱编程</h1>
                         <h2 class="wow bounceIn animated" data-wow-duration="1s" data-wow-delay=".6s">热爱生活</h2>
                         <!--<a href="#resume-sec" class="btn custom-btn-one btn-lg wow bounceIn animated" data-wow-duration="1s" data-wow-delay=".8s">DOWNLOAD RESUME</a>-->
@@ -118,6 +118,7 @@
                     <div class="col-lg-2 col-md-2 col-sm-2 text-center wow bounceIn animated" data-wow-duration="1s" data-wow-delay=".2s">
                         <span class="chart" data-percent="90">
                             <span class="percent"></span>
+                            <!--<canvas width="150" height="150"></canvas>-->
                         </span>
                         <h4>html</h4>
                     </div>
@@ -157,11 +158,9 @@
             <div class="row  move-me">
                 <div class="col-lg-4 col-md-4 col-sm-4 wow bounceIn animated" data-wow-duration="1s" data-wow-delay=".2s">
                     <h1>个人资料 </h1>
-                    <!--<h1>RESUME</h1>-->
                     <div class="color-strip"></div>
                     <a href="#resume-sec" class="btn btn-style-three ">点此下载简历</a>
                 </div>
-                <!--<div class="copyrights">Collect from <a href="http://www.cssmoban.com/"  title="网站模板">网站模板</a></div>-->
                 <div class="col-lg-8 col-md-8 col-sm-8 wow bounceIn animated" data-wow-duration="1s" data-wow-delay=".4s">
 
                     <div class="board">
@@ -283,50 +282,16 @@
                 <div class="row pad-top-bottom wow bounceIn animated" data-wow-duration="1s" data-wow-delay=".2s">
                     <div class="col-lg-12 col-md-12 col-sm-12 text-center">
                         <h1>爱编程，爱生活</h1>
-
                         <div id="testimonials" class="carousel slide" data-ride="carousel">
-
-                            <ol class="carousel-indicators">
-                                <!--<li data-target="#testimonials" data-slide-to="0" class=""></li>-->
-                                <!--<li data-target="#testimonials" data-slide-to="1" class="active"></li>-->
-                                <!--<li data-target="#testimonials" data-slide-to="2" class=""></li>-->
-                            </ol>
-
                             <div class="carousel-inner">
-                                <!--<div class="item">
-                                    <div class="container center">
-                                        <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 slide-custom">
-
-                                            <h4><i class="fa fa-quote-left"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit onec molestie non sem vel condimentum. <i class="fa fa-quote-right"></i></h4>
-                                            <div class="user-img pull-right">
-                                                <img src="assets/img/user2.png" alt="" class="img-circle image-responsive" />
-                                            </div>
-                                            <h5 class="pull-right">Lorem Dolor</h5>
-                                        </div>
-                                    </div>
-                                </div>-->
                                 <div class="item active">
                                     <div class="container center">
                                         <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 slide-custom">
-                                            <h4><i class="fa fa-quote-left"></i>我是一只前端攻城狮 <i class="fa fa-quote-right"></i></h4>
-                                            <div class="user-img pull-right">
-                                                <!--<img src="assets/img/user.gif" alt="" class="img-circle image-responsive" />-->
-                                            </div>
+                                            <h4><i class="fa fa-quote-left"></i>编程中我们会遇到很多挫折，表放弃，沙漠尽头必是绿洲。<i class="fa fa-quote-right"></i></h4>
                                             <h5 class="pull-right"></h5>
                                         </div>
                                     </div>
                                 </div>
-                                <!--<div class="item">
-                                    <div class="container center">
-                                        <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 slide-custom">
-                                            <h4><i class="fa fa-quote-left"></i>Sed ultricies, libero ut adipiscing fringilla, ante elit luctus lorem, a egestas dui metus a arcu condimentum. <i class="fa fa-quote-right"></i></h4>
-                                            <div class="user-img pull-right">
-                                                <img src="assets/img/user2.png" alt="" class="img-circle image-responsive" />
-                                            </div>
-                                            <h5 class="pull-right">Sed ultricies</h5>
-                                        </div>
-                                    </div>
-                                </div>-->
                             </div>
                         </div>
                     </div>
@@ -347,12 +312,12 @@
             <div class="row  wow bounceIn animated" data-wow-duration="1s" data-wow-delay=".4s">
                 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12  ">
                     <div class="portfolio-sec-wrap">
-                        <img class="img-responsive" src="assets/img/tianmao.png" alt="" />
+                        <img class="img-responsive" src="assets/img/tianmao.jpg" alt="" />
                         <div class="overlay">
                             <div class="portfolio-sec-inner">
                                 <h3><a href="#">天猫</a></h3>
                                 <p>临摹天猫，运用原生js</p>
-                                <a class="see"  href="../tianmao/index.html"><i class="fa fa-eye"></i>预览</a>
+                                <a class="see"  target="_blank" href="../tianmao/index.html"><i class="fa fa-eye"></i>点击查看</a>
                             </div>
                         </div>
                     </div>
@@ -360,12 +325,12 @@
 
                 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12  ">
                     <div class="portfolio-sec-wrap">
-                        <img class="img-responsive" src="assets/img/xiaomi.png" alt="" />
+                        <img class="img-responsive" src="assets/img/xiaomi.jpg" alt="" />
                         <div class="overlay">
                             <div class="portfolio-sec-inner">
                                 <h3><a href="#">小米 </a></h3>
                                 <p>临摹小米官网，运用原生js</p>
-                                <a class="see" href="../xiaomi/index.html"><i class="fa fa-eye"></i>预览 </a>
+                                <a class="see" target="_blank" href="../xiaomi/index.html"><i class="fa fa-eye"></i>点击查看 </a>
                             </div>
                         </div>
                     </div>
@@ -373,12 +338,12 @@
 
                 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12  ">
                     <div class="portfolio-sec-wrap">
-                        <img class="img-responsive" src="assets/img/todolist.png" alt="" />
+                        <img class="img-responsive" src="assets/img/todolist.jpg" alt="" />
                         <div class="overlay">
                             <div class="portfolio-sec-inner">
                                 <h3><a href="#">todolist</a></h3>
                                 <p>运用localStorage保存便签数据</p>
-                                <a class="see" href="../todolist/index.html"><i class="fa fa-eye"></i>预览</a>
+                                <a class="see" target="_blank" href="../todolist/index.html"><i class="fa fa-eye"></i>点击查看</a>
                             </div>
                         </div>
                     </div>
@@ -386,12 +351,12 @@
 
                 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12  ">
                     <div class="portfolio-sec-wrap">
-                        <img class="img-responsive" src="assets/img/dazi.png" alt="" />
+                        <img class="img-responsive" src="assets/img/dazi.jpg" alt="" />
                         <div class="overlay">
                             <div class="portfolio-sec-inner">
                                 <h3><a href="#">打字小游戏</a></h3>
                                 <p>打字小游戏，运用面向对象构造函数进行小游戏的编写</p>
-                                <a class="see" href="../lettergame/dazigame.html"><i class="fa fa-eye"></i>预览</a>
+                                <a class="see" target="_blank" href="../lettergame/dazigame.html"><i class="fa fa-eye"></i>点击查看</a>
                             </div>
                         </div>
                     </div>
@@ -399,12 +364,12 @@
 
                 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12  ">
                     <div class="portfolio-sec-wrap">
-                        <img class="img-responsive" src="assets/img/wheater.png" alt="" />
+                        <img class="img-responsive" src="assets/img/wheater.jpg" alt="" />
                         <div class="overlay">
                             <div class="portfolio-sec-inner">
                                 <h3><a href="#">天气预报</a></h3>
                                 <p>用ajax请求全国的省市信息保存数据已达到局部刷新的效果</p>
-                                <a class="see" href="../weather/weather.html"><i class="fa fa-eye"></i>预览</a>
+                                <a class="see" target="_blank" href="../weather/weather.html"><i class="fa fa-eye"></i>点击查看</a>
                             </div>
                         </div>
                     </div>
@@ -412,12 +377,12 @@
 
                 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12  ">
                     <div class="portfolio-sec-wrap">
-                        <img class="img-responsive" src="assets/img/canvas.png" alt="" />
+                        <img class="img-responsive" src="assets/img/canvas.jpg" alt="" />
                         <div class="overlay">
                             <div class="portfolio-sec-inner">
                                 <h3><a href="#">画板</a></h3>
                                 <p>运用canvas进行画板小工具的绘制 </p>
-                                <a class="see" href="../canvas/huaban.html"><i class="fa fa-eye"></i>预览</a>
+                                <a class="see" target="_blank" href="../canvas/huaban.html"><i class="fa fa-eye"></i>点击查看</a>
                             </div>
                         </div>
                     </div>
@@ -425,12 +390,12 @@
 
                 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12  ">
                     <div class="portfolio-sec-wrap">
-                        <img class="img-responsive" src="assets/img/she.png" alt="" />
+                        <img class="img-responsive" src="assets/img/she.jpg" alt="" />
                         <div class="overlay">
                             <div class="portfolio-sec-inner">
                                 <h3><a href="#">贪吃蛇</a></h3>
                                 <p>贪吃蛇小游戏，键盘控制蛇的方向</p>
-                                <a class="see" href="../snakegame/snake.html"><i class="fa fa-eye"></i>预览</a>
+                                <a class="see" target="_blank" href="../snakegame/snake.html"><i class="fa fa-eye"></i>点击查看</a>
                             </div>
                         </div>
                     </div>
@@ -438,12 +403,12 @@
 
                 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12  ">
                     <div class="portfolio-sec-wrap">
-                        <img class="img-responsive" src="assets/img/qiye.png" alt="" />
+                        <img class="img-responsive" src="assets/img/qiye.jpg" alt="" />
                         <div class="overlay">
                             <div class="portfolio-sec-inner">
                                 <h3><a href="#">企业官网</a></h3>
                                 <p>家纺官网的制作，多个页面</p>
-                                <a class="see" href="../website/index.html"><i class="fa fa-eye"></i>预览</a>
+                                <a class="see" target="_blank" href="../website/index.html"><i class="fa fa-eye"></i>点击查看</a>
                             </div>
                         </div>
                     </div>
@@ -452,12 +417,12 @@
 
                 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12  ">
                     <div class="portfolio-sec-wrap">
-                        <img class="img-responsive" src="assets/img/app.png" alt="" />
+                        <img class="img-responsive" src="assets/img/app.jpg" alt="" />
                         <div class="overlay">
                             <div class="portfolio-sec-inner">
-                                <h3><a href="#">webapp小便签</a></h3>
-                                <p>移动端小便签</p>
-                                <a class="see" href="../webapp/index.html"><i class="fa fa-eye"></i>预览 </a>
+                                <h3><a href="#">小便签</a></h3>
+                                <p>webapp小便签</p>
+                                <a class="see" target="_blank" href="../webapp/index.html"><i class="fa fa-eye"></i>点击查看 </a>
                             </div>
                         </div>
                     </div>
@@ -481,12 +446,18 @@
 
                 </div>
                 <div class="row  move-me wow bounceIn animated" data-wow-duration="1s" data-wow-delay=".4s">
-                    <div class="col-lg-12 col-lg-offset-1  col-md-12  col-md-offset-1 col-sm-12 col-sm-offset-1" id="footer-sec">
+                    <div class="col-lg-6 col-lg-offset-1  col-md-6  col-md-offset-1 col-sm-6 col-sm-offset-1" id="footer-sec">
                         <h3><strong>电话 </strong></h3>
                         <p>18404984910</p>
 
                         <p><i>邮箱 :</i> LiuRu621@163.com</p>
                         <p><i>QQ :</i> 1960683516</p>
+                    </div>
+                    <div class="col-lg-4  col-md-4  col-sm-4">
+                        <div class="erweima">
+                            <img src="assets/img/liuru.png" alt="">
+                            <p>扫一扫，查看详情</p>
+                        </div>
                     </div>
 
                 </div>
