--- a/works/canvas/huaban.html
+++ b/works/canvas/huaban.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>canvas</title>
     <link rel="stylesheet" href="animate.css">
     <link rel="stylesheet" href="huaban.css">
 </head>
@@ -16,10 +16,10 @@
                 <input type="button" value="撤销" id="cancel">&nbsp;&nbsp;&nbsp;&nbsp;
                 <input type="button" value="清空" id="clear">
             </div>
-            <div>
+            <!--<div>
                 <span class="iconfont" id="pencil">铅笔</span>
                 <span class="iconfont" id="earser">橡皮</span>
-            </div>
+            </div>-->
             <div>形状
                 <select id="shape">
                     <option value="line">直线</option>
