--- a/works/snakegame/snake.html
+++ b/works/snakegame/snake.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>snakeGame</title>
     <link rel="stylesheet" href="snake.css">
 </head>
 <body>
+<img src="img/snake.png" alt="" class="pic">
     <div class="list">
         <div class="btn" id="start">开始
             <i class="iconfont">&#xe641;</i>
@@ -18,11 +19,11 @@
             <!--<i class="iconfont">&#xe681;</i>-->
             <div class="con" id="scor">0</div>
         </div>
-        <div class="show">
+        <!--<div class="show">
             <div class="title">关卡</div>
-            <!--<i class="iconfont">&#xe65f;</i>-->
+            &lt;!&ndash;<i class="iconfont">&#xe65f;</i>&ndash;&gt;
             <div class="con" id="state">1</div>
-        </div>
+        </div>-->
     </div>
     <div class="scene"></div>
     <div class="alert">
