--- a/works/todolist/index.html
+++ b/works/todolist/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>todolist</title>
     <link rel="stylesheet" href="css/todolist.css">
 </head>
 <body>
