--- a/works/weather/weather.html
+++ b/works/weather/weather.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>weather</title>
     <link rel="stylesheet" href="css/weather.css">
 </head>
 <body>
