--- a/works/canvas/huaban.html
+++ b/works/canvas/huaban.html
@@ -16,10 +16,10 @@
                 <input type="button" value="撤销" id="cancel">&nbsp;&nbsp;&nbsp;&nbsp;
                 <input type="button" value="清空" id="clear">
             </div>
-            <!--<div>
+            <div>
                 <span class="iconfont" id="pencil">铅笔</span>
                 <span class="iconfont" id="earser">橡皮</span>
-            </div>-->
+            </div>
             <div>形状
                 <select id="shape">
                     <option value="line">直线</option>
