--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
     }
     .link a{
         font-size: 20px;
+        line-height: 40px;
+    }
+    @media screen and (max-width:639px){
+        .link{
+            width: 80%;
+            margin: 0 auto;
+            display: block;
+        }
+        .link a{
+            display: block;
+            font-size: 20px;
+            line-height: 40px;
+        }
     }
 </style>
 <body>
