--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     .content{
         width: 100vw;
         height: 100vh;
-        background: url(./background.jpg) no-repeat;
+        background: url(./background.gif) no-repeat center center;
         background-size: cover;
+        color: #ffffff;
     }
     .title{
         text-align: center;
@@ -31,6 +32,7 @@
     .link a{
         font-size: 20px;
         line-height: 40px;
+        color: #ffffff;
     }
     @media screen and (max-width:639px){
         .link{
